# ifstruct

./: .env.example  .gitignore  README.md  pyproject.toml
ifstruct/: __init__.py  client.py  dataset.py  eval.py  validator.py
tests/: test_validator.py
